This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

30-Jan-2002 (Lars Duening)  (3.3.384)
  - (simulate.c) Removed a memory leak in the warnf() routine (reported
       by Dafire).

29-Jan-2002 (Lars Duening)  (3.3.383)
  - (structs.c, swap.c) Swapping struct values no longer changes the
       refcounts of the referenced type objects. This avoids
       a racing condition during the GC, and also prevents a typeobject
       from being freed while swapped-out values still require it
       (reported by Bardioc).

29-Jan-2002 (Lars Duening)  (3.3.382)
  - (smalloc.c) In mem_increment_size(), the internal size of the
       memoryblock was most cases computed one word too small.

28-Jan-2002 (Lars Duening)  (3.3.381)
  - (prolang.y, interpret.c) Improved the error message when a given
       struct doesn't match the expected struct type.
  - (prolang.y) The compiler now checks in struct definitions if a
       given base struct is complete. This also
       catches 'struct Foo (Foo) { ..  }'.

27-Jan-2002 (Lars Duening)  (3.3.380)
  - (object.c) Restoring a plain lfun-closure no longer worked (reported
       by Bardioc).

26-Jan-2002 (Lars Duening)  (3.3.379)
  - (prolang.y) Corrected a small bug in the code generation for
       operators &&= and ||=.

26-Jan-2002 (Lars Duening)  (3.3.378)
  - (main, lex, prolang, object, simulate.c, configure) Removed the
       configuration option INITIALIZATION_BY___INIT and changed the driver
       to always use __INIT(). However, the variable sharing between clone
       and blueprint is now selectable on a per-program basis with the
       pragmas 'share_variables' and 'init_variables'. The default
       setting for the pragma can be set with the configuration option
       --enable-share-variables and with the commandline arguments
       --share-variables and --init-variables.

26-Jan-2002 (Lars Duening)  (3.3.377)