@@ -52,12 +52,12 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 384)
-(Parent-Version lpmud 3-3 383)
-(Version-Log "Removed a memory leak in the warnf() routine.")
+(Project-Version lpmud 3-3 385)
+(Parent-Version lpmud 3-3 384)
+(Version-Log "Assignements to multi-level struct references (a->b->c) didn't work.")
 (New-Version-Log
 "")
-(Checkin-Time "Thu, 30 Jan 2003 16:29:00 -0700")
+(Checkin-Time "Sun, 02 Feb 2003 17:30:27 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -94,7 +94,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.58 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.447 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.448 644))
   (HISTORY (lpmud/f/49_HISTORY 1.298 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -182,7 +182,7 @@
   (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.8 644))
   (src/i-svalue_cmp.h (lpmud/a/b/20_i-svalue_c 1.3 644))
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.35 644))
-  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.18 644))
+  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.19 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.4 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.46 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.13 644))
